added old executable-jar plugin prototype (excluded from build)